@@ -2046,12 +2046,12 @@
     "block.caliber.stripped_jungle_door_frame": "Stripped Jungle Door Frame",
     "block.caliber.stripped_oak_door_frame": "Stripped Oak Door Frame",
     "block.caliber.stripped_spruce_door_frame": "Stripped Spruce Door Frame",
-    "block.caliber.stripped_acacia_door_frame lintel_lintel": "Stripped Acacia Door Frame Lintel",
-    "block.caliber.stripped_birch_door_frame lintel_lintel": "Stripped Birch Door Frame Lintel",
-    "block.caliber.stripped_dark_oak_door_frame lintel_lintel": "Stripped Dark Oak Door Frame Lintel",
-    "block.caliber.stripped_jungle_door_frame lintel_lintel": "Stripped Jungle Door Frame Lintel",
-    "block.caliber.stripped_oak_door_frame lintel_lintel": "Stripped Oak Door Frame Lintel",
-    "block.caliber.stripped_spruce_door_frame lintel_lintel": "Stripped Spruce Door Frame Lintel",
+    "block.caliber.stripped_acacia_door_frame lintel": "Stripped Acacia Door Frame Lintel",
+    "block.caliber.stripped_birch_door_frame lintel": "Stripped Birch Door Frame Lintel",
+    "block.caliber.stripped_dark_oak_door_frame lintel": "Stripped Dark Oak Door Frame Lintel",
+    "block.caliber.stripped_jungle_door_frame lintel": "Stripped Jungle Door Frame Lintel",
+    "block.caliber.stripped_oak_door_frame lintel": "Stripped Oak Door Frame Lintel",
+    "block.caliber.stripped_spruce_door_frame lintel": "Stripped Spruce Door Frame Lintel",
     "block.caliber.stripped_acacia_eighth": "Stripped Acacia Eighth",
     "block.caliber.stripped_birch_eighth": "Stripped Birch Eighth",
     "block.caliber.stripped_dark_oak_eighth": "Stripped Dark Oak Eighth",
@@ -2113,6 +2113,12 @@
     "block.caliber.stripped_oak_window_half": "Stripped Oak Half Window",
     "block.caliber.stripped_spruce_window_half": "Stripped Spruce Half Window",
 
+    "block.caliber.stained_acacia_wood": "Stained Acacia Wood",
+    "block.caliber.stained_birch_wood": "Stained Birch Wood",
+    "block.caliber.stained_dark_oak_wood": "Stained Dark Oak Wood",
+    "block.caliber.stained_jungle_wood": "Stained Jungle Wood",
+    "block.caliber.stained_oak_wood": "Stained Oak Wood",
+    "block.caliber.stained_spruce_wood": "Stained Spruce Wood",
     "block.caliber.stained_acacia_balustrade": "Stained Acacia Balustrade",
     "block.caliber.stained_birch_balustrade": "Stained Birch Balustrade",
     "block.caliber.stained_dark_oak_balustrade": "Stained Dark Oak Balustrade",
@@ -2173,12 +2179,12 @@
     "block.caliber.stained_jungle_door_frame": "Stained Jungle Door Frame",
     "block.caliber.stained_oak_door_frame": "Stained Oak Door Frame",
     "block.caliber.stained_spruce_door_frame": "Stained Spruce Door Frame",
-    "block.caliber.stained_acacia_door_frame lintel_lintel": "Stained Acacia Door Frame Lintel",
-    "block.caliber.stained_birch_door_frame lintel_lintel": "Stained Birch Door Frame Lintel",
-    "block.caliber.stained_dark_oak_door_frame lintel_lintel": "Stained Dark Oak Door Frame Lintel",
-    "block.caliber.stained_jungle_door_frame lintel_lintel": "Stained Jungle Door Frame Lintel",
-    "block.caliber.stained_oak_door_frame lintel_lintel": "Stained Oak Door Frame Lintel",
-    "block.caliber.stained_spruce_door_frame lintel_lintel": "Stained Spruce Door Frame Lintel",
+    "block.caliber.stained_acacia_door_frame lintel": "Stained Acacia Door Frame Lintel",
+    "block.caliber.stained_birch_door_frame lintel": "Stained Birch Door Frame Lintel",
+    "block.caliber.stained_dark_oak_door_frame lintel": "Stained Dark Oak Door Frame Lintel",
+    "block.caliber.stained_jungle_door_frame lintel": "Stained Jungle Door Frame Lintel",
+    "block.caliber.stained_oak_door_frame lintel": "Stained Oak Door Frame Lintel",
+    "block.caliber.stained_spruce_door_frame lintel": "Stained Spruce Door Frame Lintel",
     "block.caliber.stained_acacia_eighth": "Stained Acacia Eighth",
     "block.caliber.stained_birch_eighth": "Stained Birch Eighth",
     "block.caliber.stained_dark_oak_eighth": "Stained Dark Oak Eighth",
