@@ -7,6 +7,12 @@
     "minecraft:jungle_log",
     "minecraft:oak_log",
     "minecraft:spruce_log",
+    "minecraft:acacia_wood",
+    "minecraft:birch_wood",
+    "minecraft:dark_oak_wood",
+    "minecraft:jungle_wood",
+    "minecraft:oak_wood",
+    "minecraft:spruce_wood",
     "minecraft:stripped_acacia_log",
     "minecraft:stripped_birch_log",
     "minecraft:stripped_dark_oak_log",
