@@ -9,14 +9,14 @@
     "minecraft:spruce_planks",
     "minecraft:crimson_planks",
     "minecraft:warped_planks",
-    "minecraft:acacia_wood",
-    "minecraft:birch_wood",
-    "minecraft:dark_oak_wood",
-    "minecraft:jungle_wood",
-    "minecraft:oak_wood",
-    "minecraft:spruce_wood",
     "minecraft:crimson_hyphae",
     "minecraft:warped_hyphae",
+    "caliber:stained_acacia_wood",
+    "caliber:stained_birch_wood",
+    "caliber:stained_dark_oak_wood",
+    "caliber:stained_jungle_wood",
+    "caliber:stained_oak_wood",
+    "caliber:stained_spruce_wood",
     "minecraft:stripped_acacia_wood",
     "minecraft:stripped_birch_wood",
     "minecraft:stripped_dark_oak_wood",
